tests/ui/destructuring-assignment/default-match-bindings-forbidden.stderr
error[E0308]: mismatched types
  --> $DIR/default-match-bindings-forbidden.rs:4:5
   |
LL |     (x, y) = &(1, 2);
   |     ^^^^^^   ------- this expression has type `&({integer}, {integer})`
   |     |
   |     expected `&({integer}, {integer})`, found `(_, _)`
   |
   = note: expected reference `&({integer}, {integer})`
                  found tuple `(_, _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
